<resources>
    <string name="app_name">房智之家pro-版</string>
    <string name="login_request_code">邀请码登录</string>
    <string name="login_verification_code">账号登录</string>
    <string name="input_phone_number">请输入用户名</string>
    <string name="input_request_code">请输入邀请码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="login_protocol_one">点击登录，即表示您同意并愿意遵守</string>
    <string name="login_protocol_two"><![CDATA[<房智用户使用协议>]]></string>
    <string name="forget_password">忘记密码?</string>
    <string name="input_right_phone_number">请输入正确的手机号码</string>
    <string name="password_not_be_null">密码不能为空</string>
    <string name="logining">正在登录...</string>
    <string name="sure">确定</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="set_login_password">设置登录密码</string>
    <string name="set_user_name">请输入姓名</string>
    <string name="finish">完成</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="phone_number_not_be_null">用户名不能为空</string>
    <string name="request_code_not_be_null">验证码不能为空</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="please_input_password">请输入密码</string>
    <string name="commit_ing">正在提交...</string>
    <string name="_more">更多</string>


    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="company_name">公司名称</string>
    <string name="company_address">公司地址</string>
    <string name="business_area">业务范围</string>
    <string name="input_password_again">再次输入新密码</string>
    <string name="get_code_again">后再次获取</string>
    <string name="all_sample">全部案例</string>
    <string name="all">全部</string>
</resources>
