<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_get_code"
    android:layout_width="1000px"
    android:layout_height="800px"
    android:layout_marginTop="30px"
    android:background="@drawable/bg_login_box"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20px"
    android:visibility="gone">

    <ImageView
        android:id="@+id/iv_close_code"
        android:src="@drawable/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.fangzhipro.app.view.ClearEditText
        android:id="@+id/et_phone_code"
        android:layout_width="640px"
        android:layout_height="100px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60px"
        android:background="@drawable/shape_edit_bg"
        android:hint="@string/input_right_phone_number"
        android:inputType="number"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:textColorHint="@color/colorTextGrayBABABA"
        android:textCursorDrawable="@null"
        android:textScaleX="0.96"
        android:textSize="30px" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="640px"
        android:layout_height="100px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80px"
        android:orientation="horizontal">

        <com.fangzhipro.app.view.ClearEditText
            android:id="@+id/et_message_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/input_verification_code"
            android:inputType="text"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:textColorHint="@color/colorTextGrayBABABA"
            android:textCursorDrawable="@null"
            android:textScaleX="0.96"
            android:textSize="30px" />

        <Space
            android:layout_width="20px"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_get_msg_code"
            android:gravity="center"
            android:text="@string/get_msg_code"
            android:textColor="@color/white"
            android:textSize="30px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="640px"
        android:layout_height="100px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100px"
        android:background="@drawable/btn_login"
        android:text="下一步"
        android:textColor="@color/white"
        android:textSize="30px" />
</com.zhy.autolayout.AutoLinearLayout>